--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>ssc</groupId>
-    <artifactId>CharCounter</artifactId>
+    <artifactId>RunLengthEncoder</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -32,7 +32,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <mainClass>ssc.CharCounter</mainClass>
+                    <mainClass>ssc.RunLengthEncoder</mainClass>
                 </configuration>
             </plugin>
         </plugins>
